--- a/slides/code/SN5.tex
+++ b/slides/code/SN5.tex
@@ -188,11 +188,8 @@
 \AgdaOperator{\AgdaFunction{⟧}}%
 \>[15]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{Δ}\AgdaSymbol{\}\{}\AgdaBound{ρ}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaFunction{Rename}\AgdaSpace{}%
-\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
-\AgdaBound{Δ}\AgdaSymbol{\}\{}\AgdaBound{u}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{ρ}\AgdaSpace{}%
+\AgdaSymbol{\}\{}\AgdaBound{u}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaDatatype{SN*}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧}}\AgdaSpace{}%
@@ -421,7 +418,13 @@
 \AgdaSymbol{\{}\AgdaSpace{}%
 \AgdaBound{SNu}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaHole{\{!\ Ln\ \{ρ\ =\ ρ₁\ ∘\ ρ\}\ SNu\ \ !\}}\AgdaSpace{}%
+\AgdaBound{Ln}\AgdaSpace{}\{
+\AgdaBound{ρ}\AgdaSpace{}
+\AgdaSymbol{=}\AgdaSpace{}
+\AgdaBound{ρ₁}\AgdaSpace{}
+\AgdaFunction{∘}\AgdaSpace{}
+\AgdaBound{ρ}\}\AgdaSpace{}
+\AgdaBound{SNu}\AgdaSpace{}%
 \AgdaSymbol{\}}\<%
 \\
 \>[0]\AgdaCatchallClause{\AgdaFunction{⟦⟧-rename}}\AgdaSpace{}%
@@ -580,12 +583,8 @@
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀\{}\AgdaBound{Γ}\AgdaSpace{}%
 \AgdaBound{Δ}\AgdaSpace{}%
-\AgdaBound{Δ₁}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{σ}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaFunction{Subst}\AgdaSpace{}%
-\AgdaBound{Γ}\AgdaSpace{}%
-\AgdaBound{Δ}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{Δ₁}\AgdaSpace{}
+\AgdaBound{σ}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⊨}}\AgdaSpace{}%
@@ -612,10 +611,10 @@
 \AgdaBound{ρ}\AgdaSpace{}%
 \AgdaBound{v}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{transport}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaDatatype{SN*}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧}}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaFunction{rename-subst-ids}\AgdaSpace{}%
+%\AgdaFunction{transport}\AgdaSpace{}%
+%\AgdaSymbol{(}\AgdaDatatype{SN*}\AgdaSpace{}%
+%\AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧}}\AgdaSymbol{)}\AgdaSpace{}%
+%\AgdaFunction{rename-subst-ids}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{SN*-rename}\AgdaSpace{}%
 \AgdaBound{ρ}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{⊨σ}\AgdaSpace{}%
