--- a/slides/code/example.tex
+++ b/slides/code/example.tex
@@ -17,7 +17,7 @@
 \AgdaDatatype{Type}\<%
 \\
 \>[0]\AgdaFunction{prod}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpacsn{}%
 \AgdaFunction{fun}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{×}}\AgdaSpace{}%
 \AgdaInductiveConstructor{⊤}\<%
@@ -1346,7 +1346,7 @@ _ = ^ π (` (S Z) · N-⋆)
 \end{code}
 %</eval>
 
-%<*sn>
+%<*sn-1>
 \begin{code}%
 	\>[0]\AgdaFunction{SN⋆}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
@@ -1359,8 +1359,10 @@ _ = ^ π (` (S Z) · N-⋆)
 	\AgdaSymbol{(λ}\AgdaSpace{}%
 	\AgdaSymbol{())}\<%
 	\\
-	%
-	\\[\AgdaEmptyExtraSkip]%
+\end{code}
+%</sn-1>
+%<*sn-2>
+\begin{code}
 	\>[0]\AgdaFunction{SN⟨,⟩}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaDatatype{SN}\AgdaSpace{}%
@@ -1383,8 +1385,10 @@ _ = ^ π (` (S Z) · N-⋆)
 	\AgdaSymbol{(}\AgdaInductiveConstructor{ξ-⟨,⟩₂}\AgdaSpace{}%
 	\AgdaSymbol{())\}}\<%
 	\\
-	%
-	\\[\AgdaEmptyExtraSkip]%
+\end{code}
+%</sn-2>
+%<*sn-3>
+\begin{code}
 	\>[0]\AgdaFunction{SNπ}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaDatatype{SN}\AgdaSpace{}%
@@ -1419,7 +1423,7 @@ _ = ^ π (` (S Z) · N-⋆)
 	\AgdaSymbol{→}\AgdaSpace{}%
 	\AgdaFunction{SN⋆}\AgdaSymbol{\}}\<%
 \end{code}
-%</sn>
+%</sn-3>
 
 %<*asso-split>
 \begin{code}
