--- a/slides/code/term.tex
+++ b/slides/code/term.tex
@@ -51,6 +51,8 @@
 \>[2]\vdots\< \\
 \end{code}
 %</base>
+
+%<*equiv>
 \begin{code}
 \>[2]\vdots\< \\
 \>[2]\AgdaOperator{\AgdaInductiveConstructor{[\AgdaUnderscore{}]≡\AgdaUnderscore{}}}\AgdaSpace{}%
@@ -86,6 +88,7 @@
 \\[\AgdaEmptyExtraSkip]%
 %
 \end{code}
+%</equiv>
 
 %<*abs>
 \begin{code}
