--- a/slides/slides.tex
+++ b/slides/slides.tex
@@ -46,7 +46,7 @@
 
 %\input{chapter/system-i}
 
-\section{Introducción a Agda}
+%\section{Introducción a Agda}
 
 \section{Formalización}
 
@@ -64,5 +64,6 @@
 \end{frame}
 
 %\input{chapter/strong-norm}
+%\input{chapter/well-founded}
 
 \end{document}
