--- a/slides/code/example.tex
+++ b/slides/code/example.tex
@@ -888,7 +888,9 @@ _ = ^ π (` (S Z) · N-⋆)
 	\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{`}}\AgdaSpace{}%
 	\AgdaInductiveConstructor{Z}\AgdaSymbol{)}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{⟩}}\AgdaSymbol{))}\AgdaSpace{}%
-	\AgdaOperator{\AgdaInductiveConstructor{·}}\AgdaSpace{}%
+	\AgdaOperator{\AgdaInductiveConstructor{·}}\AgdaSpace{}\<%
+	\\
+	\>[4]\AgdaIndent{0}\AgdaIndent{0}
 	\AgdaOperator{\AgdaInductiveConstructor{⟨}}\AgdaSpace{}%
 	\AgdaInductiveConstructor{⋆}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
