--- a/slides/code/iso_term.tex
+++ b/slides/code/iso_term.tex
@@ -439,7 +439,8 @@
 	\AgdaBound{s}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{⟩}}\<%
 	\\
-	%
+\end{code}
+%</dist>
 	\>[2]\AgdaInductiveConstructor{dist-ƛηₗᵣ}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaSymbol{∀}\AgdaSpace{}%
@@ -575,7 +576,8 @@
 	\AgdaInductiveConstructor{Z}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{⟩}}\<%
 	\\
-	%
+%<*sym-dist>
+\begin{code}
 	\>[2]\AgdaInductiveConstructor{sym-dist-ƛ}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaSymbol{∀}\AgdaSpace{}%
@@ -616,7 +618,9 @@
 	\AgdaBound{s}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{⟩}}\<%
 	\\
-	%
+	\>[2]\vdots\< \\
+\end{code}
+%</sym-dist>
 	\>[2]\AgdaInductiveConstructor{sym-dist-ƛ-split}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaSymbol{∀}\AgdaSpace{}%
