--- a/slides/code/SN1.tex
+++ b/slides/code/SN1.tex
@@ -407,11 +407,11 @@
 \AgdaSymbol{(}\AgdaInductiveConstructor{sn}\AgdaSpace{}%
 \AgdaBound{f}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{ζ}\AgdaSpace{}%
-\AgdaBound{s}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{step}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{lemma-ƛ}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{f}\AgdaSpace{}%
-\AgdaBound{s}\AgdaSymbol{)}\<%
+\AgdaBound{step}\AgdaSymbol{)}\<%
 \end{code}
 %</lemma-abs>
 
@@ -600,11 +600,11 @@
 	\AgdaBound{f}\AgdaSymbol{)}\AgdaSpace{}%
 	\AgdaBound{SNb}\AgdaSpace{}%
 	\AgdaSymbol{(}\AgdaInductiveConstructor{ξ-⟨,⟩₁}\AgdaSpace{}%
-	\AgdaBound{s}\AgdaSymbol{)}%
+	\AgdaBound{step}\AgdaSymbol{)}%
 	\>[35]\AgdaSymbol{=}\AgdaSpace{}%
 	\AgdaFunction{lemma-⟨,⟩}\AgdaSpace{}%
 	\AgdaSymbol{(}\AgdaBound{f}\AgdaSpace{}%
-	\AgdaBound{s}\AgdaSymbol{)}\AgdaSpace{}%
+	\AgdaBound{step}\AgdaSymbol{)}\AgdaSpace{}%
 	\AgdaBound{SNb}\<%
 	\\
 	%
@@ -613,12 +613,12 @@
 	\AgdaCatchallClause{\AgdaSymbol{(}}\AgdaCatchallClause{\AgdaInductiveConstructor{sn}}\AgdaSpace{}%
 	\AgdaCatchallClause{\AgdaBound{f}}\AgdaCatchallClause{\AgdaSymbol{)}}\AgdaSpace{}%
 	\AgdaCatchallClause{\AgdaSymbol{(}}\AgdaCatchallClause{\AgdaInductiveConstructor{ξ-⟨,⟩₂}}\AgdaSpace{}%
-	\AgdaCatchallClause{\AgdaBound{s}}\AgdaCatchallClause{\AgdaSymbol{)}}%
+	\AgdaCatchallClause{\AgdaBound{step}}\AgdaCatchallClause{\AgdaSymbol{)}}%
 	\>[35]\AgdaSymbol{=}\AgdaSpace{}%
 	\AgdaFunction{lemma-⟨,⟩}\AgdaSpace{}%
 	\AgdaBound{SNa}\AgdaSpace{}%
 	\AgdaSymbol{(}\AgdaBound{f}\AgdaSpace{}%
-	\AgdaBound{s}\AgdaSymbol{)}\<%
+	\AgdaBound{step}\AgdaSymbol{)}\<%
 \end{code}
 %</lemma-prod>
 
