--- a/slides/code/SN2.tex
+++ b/slides/code/SN2.tex
@@ -412,11 +412,11 @@
 \AgdaBound{f}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{SNb}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{ξ-·₁}\AgdaSpace{}%
-\AgdaBound{s}\AgdaSymbol{)}%
+\AgdaBound{step}\AgdaSymbol{)}%
 \>[36]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{lemma-·}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{f}\AgdaSpace{}%
-\AgdaBound{s}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{step}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{SNb}\<%
 \\
 %
@@ -426,12 +426,12 @@
 \AgdaCatchallClause{\AgdaSymbol{\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaBound{f}}\AgdaCatchallClause{\AgdaSymbol{)}}\AgdaSpace{}%
 \AgdaCatchallClause{\AgdaSymbol{(}}\AgdaCatchallClause{\AgdaInductiveConstructor{ξ-·₂}}\AgdaSpace{}%
-\AgdaCatchallClause{\AgdaBound{s}}\AgdaCatchallClause{\AgdaSymbol{)}}%
+\AgdaCatchallClause{\AgdaBound{step}}\AgdaCatchallClause{\AgdaSymbol{)}}%
 \>[36]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{lemma-·}\AgdaSpace{}%
 \AgdaBound{SNa}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{f}\AgdaSpace{}%
-\AgdaBound{s}\AgdaSymbol{)}\<%
+\AgdaBound{step}\AgdaSymbol{)}\<%
 \\
 %
 \>[8]\AgdaFunction{aux}\AgdaSpace{}%
