--- a/slides/code/SN4.tex
+++ b/slides/code/SN4.tex
@@ -413,7 +413,7 @@
 \AgdaSymbol{→}\AgdaSpace{}\>[1]
 \AgdaHole{\{!\ \ \ !\}}\AgdaSpace{}%
 \\
-\>[1]\AgdaComment{--\ SN*\ ⟦\AgdaUnderscore{}⟧\ ((rename\ (ext\ ρ)\ n)\ [\ u\ ])}\<%
+\>[0]\AgdaSymbol{\vdots}\>[1]\AgdaComment{--\ SN*\ ⟦\AgdaUnderscore{}⟧\ ((rename\ (ext\ ρ)\ n)\ [\ u\ ])}\<%
 \\
 \end{code}
 %</inter-rename>
@@ -452,7 +452,7 @@
 \AgdaSymbol{(}\AgdaFunction{⟦⟧-rename}\AgdaSpace{}%
 \AgdaBound{ρ}\AgdaSpace{}%
 \AgdaBound{Lt}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaHole{\{!\ \ \ !\}}\<%
+(\dots)\<%
 \\
 \end{code}
 %</sn-rename>
