--- a/slides/code/SN5.tex
+++ b/slides/code/SN5.tex
@@ -427,9 +427,7 @@
 \AgdaBound{SNu}\AgdaSpace{}%
 \AgdaSymbol{\}}\<%
 \\
-\>[0]\AgdaCatchallClause{\AgdaFunction{⟦⟧-rename}}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaHole{\{!\ \ \ !\}}\<%
+\>[0]\AgdaSymbol{\vdots}\<%
 \end{code}
 %</inter-rename>
 
